# perplex-page

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  fly.toml  lavandula.yml  makefile  simpcurl  simpcurl.c
app/: app.c  routes.c  routes.h
app/controllers/: controllers.h  home.c  htmx_page.c  search.c  static_assets.c
frontend/: Cargo.toml  index.html
frontend/src/: main.rs
frontend_htmx/: index.html
lavandula/: Makefile  api_response.c  auth.c  base64.c  cors.c  dotenv.c  http.c  json.c  lavandula.c  middleware.c  request_context.c  router.c  server.c  sql.c  utils.c
lavandula/include/: api_response.h  app.h  auth.h  base64.h  cli.h  cors.h  dotenv.h  ela.h  environment.h  http.h  json.h  lavandula.h  lavandula_test.h  lavender.h  lavender_ast.h  lavender_lexer.h  lavender_parser.h  lavender_transpiler.h  logger.h  middleware.h  rate_limiter.h  request_context.h  router.h  server.h  sql.h  types.h  utils.h  validate_json_body.h  validator.h  version.h  yaml_lexer.h  yaml_node.h  yaml_parser.h  yaml_reader.h
lavandula_override/: server.c
scripts/: publish_to_github.sh
