[package]
name = "perplex_frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
gloo-net = "0.5"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlInputElement", "Window", "Document", "Element", "console"] }
console_error_panic_hook = "0.1"
